@@ -1,3 +1,8 @@
+2007-05-18  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Fix: src/kahua-server.scm
+	  Unsafe implementation of kahua-write-static-file.
+
 2007-05-03  Katsutoshi Itoh <cut-sea@kahua.org>
 
 	* Fix: src/kahua/persistence/efs.scm
